--- a/backend/shortener/requirements.txt
+++ b/backend/shortener/requirements.txt
@@ -1,5 +1,5 @@
-fastapi['standard']==0.116.1
+fastapi[standard]==0.116.1
 sqlmodel==0.0.24
 python-dotenv==1.1.1
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 slowapi==0.1.9
